@@ -4,11 +4,15 @@ Changelog
 0.4 (unreleased)
 ----------------
 
+- ecreall.trashcan integration.
+  [thomasdesvenain]
+
 - Added a view "listingoptions" that allows to setup some behaviours:
     - sort mode
     - default sort criterion
     - default sort order
     - edit popup activated or not
+  [thomasdesvenain]
 
 - Improve transition form behaviour.
   [thomasdesvenain]
